# mav_trajectory_generation

gbplanner_trajopt/: CMakeLists.txt  package.xml
gbplanner_trajopt/include/gbplanner_trajopt/: gbplanner_trajopt.h
gbplanner_trajopt/src/: gbplanner_trajopt.cpp
mav_trajectory_generation/include/mav_trajectory_generation/: vertex.h
mav_trajectory_generation/src/: vertex.cpp
mav_trajectory_generation_example/cfg/: rviz_view_firefly.rviz
mav_trajectory_generation_example/include/mav_trajectory_generation_example/: example_planner.h
mav_trajectory_generation_example/launch/: example.launch
mav_trajectory_generation_example/src/: example_planner.cc
