<?xml version="1.0"?>
<package format="2">
  <name>gbplanner_trajopt</name>
  <version>0.0.0</version>
  <description>Interface with gbplanner</description>

  <author email="tung.dang@nevada.unr.edu">Tung Dang</author>
  <maintainer email="tung.dang@nevada.unr.edu">Tung Dang</maintainer>

  <license>ASL 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>mav_msgs</depend>
  <depend>mav_trajectory_generation</depend>
  <depend>mav_trajectory_generation_ros</depend>
  <depend>mav_visualization</depend>
  <depend>mav_planning_msgs</depend>
  <depend>eigen_checks</depend>
  <depend>roslib</depend>
</package>
